--- a/notebooks/pMEC1139.ipynb
+++ b/notebooks/pMEC1139.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This vector expresses eight genes and was assembled from the eight single gene expression cassettes below:\n",
     "\n",
-    "Gene | Enzyme | Acronym | Cassette\n",
+    "Gene | Enzyme | Acronym | Cassette |\n",
     "-------------------------------------------------- |-------------------|---|-----|\n",
     "[SsXYL1](http://www.ncbi.nlm.nih.gov/gene/4839234) |D-xylose reductase |XR | [pYPK0_TEF1_PsXYL1_TDH3](pYPK0_TEF1_PsXYL1_TDH3.ipynb)\n",
     "[SsXYL2](http://www.ncbi.nlm.nih.gov/gene/4852013) |xylitol dehydrogenase |XDH | [pYPK0_TDH3_PsXYL2_PGI1](pYPK0_TDH3_PsXYL2_PGI1.ipynb)\n",
